eks/vpc-lattice/vpc-lattice-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: sample-network
  namespace: sample
  annotations:
    application-networking.k8s.aws/lattice-vpc-association: "true"
spec:
  gatewayClassName: amazon-vpc-lattice
  listeners:
    - name: tls-with-default-domain
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
